# serializer version: 1
# name: test_graphql_electricity_midnight_cest
  EnergyPrices(
    average_price=0.24064782499999993,
    prices=dict({
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 30, 23, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 30, 22, 0, tzinfo=datetime.timezone.utc),
      ): 0.2862134,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 0, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 30, 23, 0, tzinfo=datetime.timezone.utc),
      ): 0.2749604,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 1, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 0, 0, tzinfo=datetime.timezone.utc),
      ): 0.2714635,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 10, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 9, 0, tzinfo=datetime.timezone.utc),
      ): 0.15553340000000002,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 11, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 10, 0, tzinfo=datetime.timezone.utc),
      ): 0.15302870000000002,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 12, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 11, 0, tzinfo=datetime.timezone.utc),
      ): 0.1408077,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 13, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 12, 0, tzinfo=datetime.timezone.utc),
      ): 0.1473659,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 14, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 13, 0, tzinfo=datetime.timezone.utc),
      ): 0.1531134,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 15, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 14, 0, tzinfo=datetime.timezone.utc),
      ): 0.1566829,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 16, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 15, 0, tzinfo=datetime.timezone.utc),
      ): 0.20090840000000001,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 17, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 16, 0, tzinfo=datetime.timezone.utc),
      ): 0.2642519,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 18, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 17, 0, tzinfo=datetime.timezone.utc),
      ): 0.3157495,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 19, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 18, 0, tzinfo=datetime.timezone.utc),
      ): 0.38948689999999997,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 2, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 1, 0, tzinfo=datetime.timezone.utc),
      ): 0.2700357,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 20, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 19, 0, tzinfo=datetime.timezone.utc),
      ): 0.3895111,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 21, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 20, 0, tzinfo=datetime.timezone.utc),
      ): 0.321013,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 22, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 21, 0, tzinfo=datetime.timezone.utc),
      ): 0.2774893,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 3, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 2, 0, tzinfo=datetime.timezone.utc),
      ): 0.2706407,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 4, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 3, 0, tzinfo=datetime.timezone.utc),
      ): 0.26876520000000004,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 5, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 4, 0, tzinfo=datetime.timezone.utc),
      ): 0.2714393,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 6, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 5, 0, tzinfo=datetime.timezone.utc),
      ): 0.2605614,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 7, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 6, 0, tzinfo=datetime.timezone.utc),
      ): 0.2218535,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 8, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 7, 0, tzinfo=datetime.timezone.utc),
      ): 0.1579534,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 9, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 8, 0, tzinfo=datetime.timezone.utc),
      ): 0.1567192,
    }),
    raw_blocks=list([
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.107,
        energy_price_incl=0.12947,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 30, 23, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 30, 22, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.02247,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.0977,
        energy_price_incl=0.118217,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 0, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 30, 23, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.020517,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.09481,
        energy_price_incl=0.1147201,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 1, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 0, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0199101,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.09363,
        energy_price_incl=0.1132923,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 2, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 1, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0196623,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.09413,
        energy_price_incl=0.1138973,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 3, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 2, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0197673,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.09258,
        energy_price_incl=0.1120218,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 4, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 3, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0194418,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.09479,
        energy_price_incl=0.1146959,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 5, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 4, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0199059,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.0858,
        energy_price_incl=0.103818,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 6, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 5, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.018018,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.05381,
        energy_price_incl=0.0651101,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 7, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 6, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0113001,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.001,
        energy_price_incl=0.00121,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 8, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 7, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.00021,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=-2e-05,
        energy_price_incl=-2.42e-05,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 9, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 8, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=-4.2e-06,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=-0.001,
        energy_price_incl=-0.00121,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 10, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 9, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=-0.00021,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=-0.00307,
        energy_price_incl=-0.0037147,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 11, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 10, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=-0.0006447,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=-0.01317,
        energy_price_incl=-0.0159357,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 12, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 11, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=-0.0027657,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=-0.00775,
        energy_price_incl=-0.0093775,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 13, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 12, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=-0.0016275,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=-0.003,
        energy_price_incl=-0.00363,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 14, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 13, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=-0.00063,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=-5e-05,
        energy_price_incl=-6.05e-05,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 15, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 14, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=-1.05e-05,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.0365,
        energy_price_incl=0.044165,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 16, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 15, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.007665,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.08885,
        energy_price_incl=0.1075085,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 17, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 16, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0186585,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.13141,
        energy_price_incl=0.1590061,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 18, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 17, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0275961,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.19235,
        energy_price_incl=0.2327435,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 19, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 18, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0403935,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.19237,
        energy_price_incl=0.2327677,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 20, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 19, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0403977,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.13576,
        energy_price_incl=0.1642696,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 21, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 20, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0285096,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.09979,
        energy_price_incl=0.1207459,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 22, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 21, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0209559,
      ),
    ]),
  )
# ---
# name: test_graphql_electricity_model
  EnergyPrices(
    average_price=0.24064782499999993,
    prices=dict({
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 30, 23, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 30, 22, 0, tzinfo=datetime.timezone.utc),
      ): 0.2862134,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 0, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 30, 23, 0, tzinfo=datetime.timezone.utc),
      ): 0.2749604,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 1, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 0, 0, tzinfo=datetime.timezone.utc),
      ): 0.2714635,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 10, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 9, 0, tzinfo=datetime.timezone.utc),
      ): 0.15553340000000002,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 11, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 10, 0, tzinfo=datetime.timezone.utc),
      ): 0.15302870000000002,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 12, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 11, 0, tzinfo=datetime.timezone.utc),
      ): 0.1408077,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 13, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 12, 0, tzinfo=datetime.timezone.utc),
      ): 0.1473659,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 14, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 13, 0, tzinfo=datetime.timezone.utc),
      ): 0.1531134,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 15, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 14, 0, tzinfo=datetime.timezone.utc),
      ): 0.1566829,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 16, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 15, 0, tzinfo=datetime.timezone.utc),
      ): 0.20090840000000001,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 17, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 16, 0, tzinfo=datetime.timezone.utc),
      ): 0.2642519,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 18, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 17, 0, tzinfo=datetime.timezone.utc),
      ): 0.3157495,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 19, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 18, 0, tzinfo=datetime.timezone.utc),
      ): 0.38948689999999997,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 2, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 1, 0, tzinfo=datetime.timezone.utc),
      ): 0.2700357,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 20, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 19, 0, tzinfo=datetime.timezone.utc),
      ): 0.3895111,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 21, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 20, 0, tzinfo=datetime.timezone.utc),
      ): 0.321013,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 22, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 21, 0, tzinfo=datetime.timezone.utc),
      ): 0.2774893,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 3, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 2, 0, tzinfo=datetime.timezone.utc),
      ): 0.2706407,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 4, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 3, 0, tzinfo=datetime.timezone.utc),
      ): 0.26876520000000004,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 5, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 4, 0, tzinfo=datetime.timezone.utc),
      ): 0.2714393,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 6, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 5, 0, tzinfo=datetime.timezone.utc),
      ): 0.2605614,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 7, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 6, 0, tzinfo=datetime.timezone.utc),
      ): 0.2218535,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 8, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 7, 0, tzinfo=datetime.timezone.utc),
      ): 0.1579534,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 9, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 8, 0, tzinfo=datetime.timezone.utc),
      ): 0.1567192,
    }),
    raw_blocks=list([
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.107,
        energy_price_incl=0.12947,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 30, 23, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 30, 22, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.02247,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.0977,
        energy_price_incl=0.118217,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 0, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 30, 23, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.020517,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.09481,
        energy_price_incl=0.1147201,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 1, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 0, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0199101,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.09363,
        energy_price_incl=0.1132923,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 2, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 1, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0196623,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.09413,
        energy_price_incl=0.1138973,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 3, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 2, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0197673,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.09258,
        energy_price_incl=0.1120218,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 4, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 3, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0194418,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.09479,
        energy_price_incl=0.1146959,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 5, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 4, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0199059,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.0858,
        energy_price_incl=0.103818,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 6, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 5, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.018018,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.05381,
        energy_price_incl=0.0651101,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 7, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 6, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0113001,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.001,
        energy_price_incl=0.00121,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 8, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 7, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.00021,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=-2e-05,
        energy_price_incl=-2.42e-05,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 9, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 8, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=-4.2e-06,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=-0.001,
        energy_price_incl=-0.00121,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 10, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 9, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=-0.00021,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=-0.00307,
        energy_price_incl=-0.0037147,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 11, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 10, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=-0.0006447,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=-0.01317,
        energy_price_incl=-0.0159357,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 12, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 11, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=-0.0027657,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=-0.00775,
        energy_price_incl=-0.0093775,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 13, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 12, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=-0.0016275,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=-0.003,
        energy_price_incl=-0.00363,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 14, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 13, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=-0.00063,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=-5e-05,
        energy_price_incl=-6.05e-05,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 15, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 14, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=-1.05e-05,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.0365,
        energy_price_incl=0.044165,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 16, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 15, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.007665,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.08885,
        energy_price_incl=0.1075085,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 17, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 16, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0186585,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.13141,
        energy_price_incl=0.1590061,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 18, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 17, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0275961,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.19235,
        energy_price_incl=0.2327435,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 19, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 18, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0403935,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.19237,
        energy_price_incl=0.2327677,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 20, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 19, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0403977,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.13576,
        energy_price_incl=0.1642696,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 21, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 20, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0285096,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.09979,
        energy_price_incl=0.1207459,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 22, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 21, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0209559,
      ),
    ]),
  )
# ---
# name: test_graphql_electricity_no_prices
  EnergyPrices(
    average_price=None,
    prices=dict({
    }),
    raw_blocks=list([
    ]),
  )
# ---
# name: test_graphql_electricity_none_date
  EnergyPrices(
    average_price=0.06934249999999999,
    prices=dict({
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 30, 23, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 30, 22, 0, tzinfo=datetime.timezone.utc),
      ): 0.107,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 0, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 30, 23, 0, tzinfo=datetime.timezone.utc),
      ): 0.0977,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 1, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 0, 0, tzinfo=datetime.timezone.utc),
      ): 0.09481,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 10, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 9, 0, tzinfo=datetime.timezone.utc),
      ): -0.001,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 11, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 10, 0, tzinfo=datetime.timezone.utc),
      ): -0.00307,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 12, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 11, 0, tzinfo=datetime.timezone.utc),
      ): -0.01317,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 13, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 12, 0, tzinfo=datetime.timezone.utc),
      ): -0.00775,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 14, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 13, 0, tzinfo=datetime.timezone.utc),
      ): -0.003,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 15, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 14, 0, tzinfo=datetime.timezone.utc),
      ): -5e-05,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 16, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 15, 0, tzinfo=datetime.timezone.utc),
      ): 0.0365,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 17, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 16, 0, tzinfo=datetime.timezone.utc),
      ): 0.08885,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 18, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 17, 0, tzinfo=datetime.timezone.utc),
      ): 0.13141,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 19, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 18, 0, tzinfo=datetime.timezone.utc),
      ): 0.19235,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 2, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 1, 0, tzinfo=datetime.timezone.utc),
      ): 0.09363,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 20, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 19, 0, tzinfo=datetime.timezone.utc),
      ): 0.19237,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 21, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 20, 0, tzinfo=datetime.timezone.utc),
      ): 0.13576,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 22, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 21, 0, tzinfo=datetime.timezone.utc),
      ): 0.09979,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 3, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 2, 0, tzinfo=datetime.timezone.utc),
      ): 0.09413,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 4, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 3, 0, tzinfo=datetime.timezone.utc),
      ): 0.09258,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 5, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 4, 0, tzinfo=datetime.timezone.utc),
      ): 0.09479,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 6, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 5, 0, tzinfo=datetime.timezone.utc),
      ): 0.0858,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 7, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 6, 0, tzinfo=datetime.timezone.utc),
      ): 0.05381,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 8, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 7, 0, tzinfo=datetime.timezone.utc),
      ): 0.001,
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 9, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 8, 0, tzinfo=datetime.timezone.utc),
      ): -2e-05,
    }),
    raw_blocks=list([
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.107,
        energy_price_incl=0.12947,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 30, 23, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 30, 22, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.02247,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.0977,
        energy_price_incl=0.118217,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 0, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 30, 23, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.020517,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.09481,
        energy_price_incl=0.1147201,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 1, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 0, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0199101,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.09363,
        energy_price_incl=0.1132923,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 2, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 1, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0196623,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.09413,
        energy_price_incl=0.1138973,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 3, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 2, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0197673,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.09258,
        energy_price_incl=0.1120218,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 4, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 3, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0194418,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.09479,
        energy_price_incl=0.1146959,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 5, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 4, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0199059,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.0858,
        energy_price_incl=0.103818,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 6, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 5, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.018018,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.05381,
        energy_price_incl=0.0651101,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 7, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 6, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0113001,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.001,
        energy_price_incl=0.00121,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 8, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 7, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.00021,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=-2e-05,
        energy_price_incl=-2.42e-05,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 9, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 8, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=-4.2e-06,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=-0.001,
        energy_price_incl=-0.00121,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 10, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 9, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=-0.00021,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=-0.00307,
        energy_price_incl=-0.0037147,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 11, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 10, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=-0.0006447,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=-0.01317,
        energy_price_incl=-0.0159357,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 12, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 11, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=-0.0027657,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=-0.00775,
        energy_price_incl=-0.0093775,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 13, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 12, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=-0.0016275,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=-0.003,
        energy_price_incl=-0.00363,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 14, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 13, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=-0.00063,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=-5e-05,
        energy_price_incl=-6.05e-05,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 15, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 14, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=-1.05e-05,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.0365,
        energy_price_incl=0.044165,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 16, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 15, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.007665,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.08885,
        energy_price_incl=0.1075085,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 17, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 16, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0186585,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.13141,
        energy_price_incl=0.1590061,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 18, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 17, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0275961,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.19235,
        energy_price_incl=0.2327435,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 19, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 18, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0403935,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.19237,
        energy_price_incl=0.2327677,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 20, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 19, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0403977,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.13576,
        energy_price_incl=0.1642696,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 21, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 20, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0285096,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.10154,
            'priceIncl': 0.1228634,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.028,
            'priceIncl': 0.03388,
          }),
        ]),
        energy_price_excl=0.09979,
        energy_price_incl=0.1207459,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 22, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 21, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.0209559,
      ),
    ]),
  )
# ---
# name: test_graphql_gas_model
  EnergyPrices(
    average_price=1.20641240223812,
    prices=dict({
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 4, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 30, 4, 0, tzinfo=datetime.timezone.utc),
      ): 1.21367051296348,
      TimeRange(
        end_excluding=FakeDatetime(2025, 6, 1, 4, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 4, 0, tzinfo=datetime.timezone.utc),
      ): 1.19915429151276,
    }),
    raw_blocks=list([
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.57816,
            'priceIncl': 0.6995736,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.08561,
            'priceIncl': 0.1035881,
          }),
        ]),
        energy_price_excl=0.339263481788,
        energy_price_incl=0.41050881296348,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 4, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 30, 4, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.07124533117548,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.57816,
            'priceIncl': 0.6995736,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.08561,
            'priceIncl': 0.1035881,
          }),
        ]),
        energy_price_excl=0.327266604556,
        energy_price_incl=0.39599259151276,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 6, 1, 4, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 4, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.06872598695676,
      ),
    ]),
  )
# ---
# name: test_graphql_gas_morning_model
  EnergyPrices(
    average_price=1.20641240223812,
    prices=dict({
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 4, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 30, 4, 0, tzinfo=datetime.timezone.utc),
      ): 1.21367051296348,
      TimeRange(
        end_excluding=FakeDatetime(2025, 6, 1, 4, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 4, 0, tzinfo=datetime.timezone.utc),
      ): 1.19915429151276,
    }),
    raw_blocks=list([
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.57816,
            'priceIncl': 0.6995736,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.08561,
            'priceIncl': 0.1035881,
          }),
        ]),
        energy_price_excl=0.339263481788,
        energy_price_incl=0.41050881296348,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 4, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 30, 4, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.07124533117548,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.57816,
            'priceIncl': 0.6995736,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.08561,
            'priceIncl': 0.1035881,
          }),
        ]),
        energy_price_excl=0.327266604556,
        energy_price_incl=0.39599259151276,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 6, 1, 4, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 4, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.06872598695676,
      ),
    ]),
  )
# ---
# name: test_graphql_gas_none_date
  EnergyPrices(
    average_price=1.20641240223812,
    prices=dict({
      TimeRange(
        end_excluding=FakeDatetime(2025, 5, 31, 4, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 30, 4, 0, tzinfo=datetime.timezone.utc),
      ): 1.21367051296348,
      TimeRange(
        end_excluding=FakeDatetime(2025, 6, 1, 4, 0, tzinfo=datetime.timezone.utc),
        start_including=FakeDatetime(2025, 5, 31, 4, 0, tzinfo=datetime.timezone.utc),
      ): 1.19915429151276,
    }),
    raw_blocks=list([
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.57816,
            'priceIncl': 0.6995736,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.08561,
            'priceIncl': 0.1035881,
          }),
        ]),
        energy_price_excl=0.339263481788,
        energy_price_incl=0.41050881296348,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 5, 31, 4, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 30, 4, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.07124533117548,
      ),
      EnergyPriceBlock(
        additional_costs=list([
          dict({
            'name': 'Energy tax',
            'priceExcl': 0.57816,
            'priceIncl': 0.6995736,
          }),
          dict({
            'name': 'Purchasing cost',
            'priceExcl': 0.08561,
            'priceIncl': 0.1035881,
          }),
        ]),
        energy_price_excl=0.327266604556,
        energy_price_incl=0.39599259151276,
        time_range=TimeRange(
          end_excluding=FakeDatetime(2025, 6, 1, 4, 0, tzinfo=datetime.timezone.utc),
          start_including=FakeDatetime(2025, 5, 31, 4, 0, tzinfo=datetime.timezone.utc),
        ),
        vat=0.06872598695676,
      ),
    ]),
  )
# ---
